--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "SET NODE_ENV=production vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "build": "NODE_ENV=production vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.1.3",
@@ -20,10 +18,8 @@
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
-    "gh-pages": "^4.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
-  },
-  "homepage": "https://aphievel.github.io/Nasa-image-of-the-day"
+  }
 }
