--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build project
         run: npm run build
         env:
-          VITE_APOD_KEY: ${{secrets.VITE_APOD_KEY}}
+          APOD_KEY: ${{secrets.APOD_KEY}}
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
